# apocomitamatma.pl

./: README.md  pyproject.toml  statistics.toml  video-statistics.py
front/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.js
front/src/: app.css
front/src/lib/: statistics.json  utils.js
front/src/lib/components/: Arrow.svelte  CTAButton.svelte  Container.svelte  FormulaBubbles.svelte  Link.svelte  Logo.svelte  Partners.svelte  Section.svelte  Social.svelte  Sprite.svelte  VerticalStripes.svelte  spriteImages.js
front/src/lib/images/decorations/: formulas.js
front/src/lib/images/groups/: index.js
front/src/lib/sections/: Collab.svelte  Hero.svelte  Hire.svelte  HireDetails.svelte  Story1.svelte  Story2.svelte
front/src/routes/: +layout.svelte  +page.svelte
front/src/routes/discord/: +page.server.js
front/src/routes/facebook/: +page.server.js
front/src/routes/faq/: +page.svelte
front/src/routes/instagram/: +page.server.js
front/src/routes/new/: +page.svelte  Card.svelte  Cards.svelte  Hire.svelte
front/src/routes/showcase/: +page.svelte
front/src/routes/tiktok/: +page.server.js
front/src/routes/youtube/: +page.server.js
front/static/: hero.webm  hire.webm
